[package]
name = "kvs"
version = "0.1.0"
authors = ["Mateusz Urbańczyk <mateusz.urbanczyk97@gmail.com>"]
description = "A key-value store"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = { version = "2.6.1", features = ["chrono-0_4", "serde_with"] }
chrono = "0.4.24"
clap = { version = "4.2.7", features = ["derive"] }
serde = { version = "1.0.163", features = ["derive"] }

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"

[lib]
test = false
doctest = false

[[bin]]
name = "kvs"
test = false
doctest = false
