[package]
name = "rust_src"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
slog = "2.7.0"
slog-scope = "4.4.0"
slog-term = "2.9.0"
